--- a/doc/Cheatsheet/main.tex
+++ b/doc/Cheatsheet/main.tex
@@ -151,6 +151,7 @@
 \vkishortcut{Insert timestamp}{}{C-c .}{org-time-stamp}
 \vkshortcut{Change current date by one day}{timestamp}{S-[$\leftarrow\rightarrow$]}{org-timestamp-(down|up)-day}
 \vkshortcut{Change current dateelement by one}{timestamp}{S-[$\uparrow\downarrow$]}{org-timestamp-(up|down)}
+\vkishortcut{Open agenda at timestamp         }{}{C-c C-o}{org-open-at-point}
 \vkishortcut{Add deadline         }{}{C-c C-d}{org-deadline}
 \vkishortcut{Add scheduled date   }{}{C-c C-s}{org-schedule}
 \vkusage{Removing deadline/scheduled datestamp}{}{C-u C-c C-d OR C-u C-c C-s}
